welcome.lessons.welcome.array.array123.Array123.scala.error
array123:14: error: ')' expected but ':' found.
def copieTableauSaufUn (tab:Array[Int]:Boolean = {
                                      ^