welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  var l = nums.length
  l match {
    case 0 => false
    case 1 => false
    case 2 => false
    case 3 if ((nums(0)==1)&&(nums(1)==2)&&(nums(2)==3)) => true
    case 3 => false
    case _ if ((nums(l-1)==3)&&(nums(l-2)==2)&&(nums(l-3)==1))=> true
    case _ => array123(copieTableauSaufUn(nums))
  }
}

def copieTableauSaufUn (tab:Array[Int]:Boolean = {
  var l = nums.length
  var res= new Array[Int] (l-1)
  for (i<- 0 to l-2){
    res(i)=nums(i)
  }
}